# zema

./: .env.example  .gitignore  CHANGELOG-v0.4-to-v0.6.md  CHANGELOG-v0.4.0.md  CHANGELOG-v0.6.1-to-v0.6.3.md  CHANGELOG-v0.6.4.md  CHANGELOG.md  README.md  docker-compose.yml  pyproject.toml
alembic/versions/: 0004_telegram_bot_settings.py  0005_telegram_runtime_status.py
app/: adherence.py  api.py  import_export.py  main.py  models.py  schemas.py  services.py  telegram_runtime.py  telegram_settings.py
app/core/: config.py
app/dashboard/: auth.py  read_model.py  routes.py
app/dashboard/static/: dashboard.css
app/dashboard/templates/: dashboard.html  login.html
cli/src/czm_cli/: cli.py  client.py
cli/src/czm_cli/commands/: backup.py
cli/src/czm_cli/telegram/: commands.py  handlers.py  keyboards.py  reminders.py
cli/tests/: test_cli.py  test_client.py  test_telegram_buttons.py  test_telegram_reminders.py
docker/: api.Dockerfile  telegram.Dockerfile
scripts/: start-telegram.sh  stop-telegram.sh  update.sh
tests/: test_adherence.py  test_app_telegram_runtime.py  test_dashboard.py  test_episodes.py  test_import_export.py  test_update_persistence.py
